udisks2: Fix error when compiling with -Werror=format-security

https://bugzilla.gnome.org/show_bug.cgi?id=676693