monitor/udisks2/gvfsudisks2mount.c
@@ -867,7 +867,7 @@ umount_command_cb (GObject       *source_object,
   g_simple_async_result_set_error (data->simple,
                                    G_IO_ERROR,
                                    G_IO_ERROR_FAILED,
-                                   standard_error);
+                                   "%s", standard_error);
   g_simple_async_result_complete (data->simple);
   data->completed = TRUE;
   unmount_data_unref (data);
